# Assignment_2

./: CMakeLists.txt  README.md
shaders/: slice2D.fs  slice2D.vs  volume3D.fs  volume3D.vs
src/: CS247_prog.cpp  CS247_prog.h  glslprogram.cpp  vbocube.cpp  vbocube.h  vboquad.cpp  vboquad.h
